[package]
name = "hidasta"
description = "Simple inter-process signalling mechanism for shell scripts"
version = "0.1.0"
authors = ["Soumya <soumyasr@google.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/soumya92/hidasta"
keywords = ["cli", "shell", "wait"]
categories = ["command-line-utilities"]

[dependencies]
getopts = "0.2"
mio = { version = "0.7", features = ["os-poll", "uds"] }
nix = "0.20"
slab = "0.4"
